traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:12: error: not found: value Direction
  return (estFaceMur && estDroiteMur && getDirection==Direction.SOUTH)
                                                      ^